--- a/Frontend/hello/templates/employee/index.html
+++ b/Frontend/hello/templates/employee/index.html
@@ -107,7 +107,7 @@
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
               {% for profile in profile_json.profiles %}
                   {% for key, value in profile.items %}
-                      <a href="/{{ key }}:{{value.user}}">
+                      <a href="/{{ key }}/{{value.domain}}/{{value.user}}">
                           <div class="col">
                               {% if 'AD' in key %}
                                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-windows" viewBox="0 0 16 16">
@@ -120,7 +120,7 @@
                                       <path d="M7.001 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0z" />
                                   </svg>
                               {% endif %}
-                              {{ value.user }}
+                              {{value.domain}}\{{value.user}}
                           </div>
                       </a>
                       <div class="w-100 border-top"></div>
