--- a/Frontend/hello/templates/active_directory/index.html
+++ b/Frontend/hello/templates/active_directory/index.html
@@ -6,10 +6,10 @@
         async function hideMail() {
             let body = document.getElementById("hideMailModalBody");
             let id = encodeURIComponent("{{ id }}");
-            let dcip = encodeURIComponent("{{ip_address}}");
+            let domain = encodeURIComponent("{{ domain }}");
             try {
                 
-                var result = await fetch(`https://localhost:7095/HideMailBox?id=${id}`);
+                var result = await fetch(`https://localhost:7095/HideMailBox?id=${id}&domain=${domain}`);
                 
                 body.innerText = "Почтовый ящик был успешно скрыт";
             } catch {
@@ -26,10 +26,10 @@
         async function showMail() {
             let id = encodeURIComponent("{{ id }}");
             let body = document.getElementById("showMailModalBody");
-            let dcip = encodeURIComponent("{{ip_address}}");
+            let domain = encodeURIComponent("{{ domain }}");
             try {
                 
-                var result =  await fetch(`https://localhost:7095/ShowMailBox?id=${id}`);
+                var result =  await fetch(`https://localhost:7095/ShowMailBox?id=${id}&domain=${domain}`);
                 
                 body.innerText = "Почтовый ящик снова показан";
             } catch {
@@ -46,11 +46,11 @@
         async function ban() {
             let id = encodeURIComponent("{{ id }}");
             console.warn(id)
+            let domain = encodeURIComponent("{{ domain }}");
             let body = document.getElementById("banModalBody");
-            let dcip = encodeURIComponent("{{ip_address}}");
             try {
                 
-                var result = await fetch(`https://localhost:7095/BanUser?id=${id}`).then(response => response.json());
+                var result = await fetch(`https://localhost:7095/BanUser?id=${id}&domain=${domain}`).then(response => response.json());
                 
             } catch(error) {
                 console.warn(error)
@@ -69,10 +69,10 @@
         async function unban() {
             let id = encodeURIComponent("{{ id }}");
             let body = document.getElementById("unbanModalBody");
-            let dcip = encodeURIComponent("{{ip_address}}");
+            let domain = encodeURIComponent("{{ domain }}");
             try {
                 
-                var result = await fetch(`https://localhost:7095/UnbanUser?id=${id}`).then(response => response.json());
+                var result = await fetch(`https://localhost:7095/UnbanUser?id=${id}&domain=${domain}`).then(response => response.json());
                 
                 body.innerText = "Пользователя удалось разблокировать";
             } catch(error) {
@@ -92,7 +92,7 @@
             try {
                 let groupName = document.getElementById("group-name-add").value;
                 let id = encodeURIComponent("{{ id }}");
-                let dcip = encodeURIComponent("{{ip_address}}");
+                let domain = encodeURIComponent("{{ domain }}");
                 var result = await fetch(`https://localhost:7095/AddToGroup`, {
                     method:"POST",
                     headers: new Headers({
@@ -103,6 +103,7 @@
                             "name":id
                         },
                         "group":groupName,
+                        "domain":domain
                     })
                 })
                 let body = document.getElementById("addGroupStatus");
@@ -125,7 +126,7 @@
             try {
                 let groupName = document.getElementById("group-name-rem").value;
                 let id = encodeURIComponent("{{ id }}");
-                let dcip = encodeURIComponent("{{ip_address}}");
+                let domain = encodeURIComponent("{{ domain }}");
                 var result = await fetch(`https://localhost:7095/RemoveFromGroup`, {
                     method:"POST",
                     headers: new Headers({
@@ -136,6 +137,7 @@
                             "name":id
                         },
                         "group":groupName,
+                        "domain":domain
                     })
                 })
                 let body = document.getElementById("remGroupStatus");
@@ -158,7 +160,7 @@
             try {
                 let Passw = document.getElementById("password-field").value;
                 let id = encodeURIComponent("{{ id }}");
-                let dcip = encodeURIComponent("{{ip_address}}");
+                let domain = encodeURIComponent("{{ domain }}");
                 var result = await fetch(`https://localhost:7095/ChangePassword`, {
                     method:"POST",
                     headers: new Headers({
@@ -169,6 +171,7 @@
                             "name":id
                         },
                         "password":Passw,
+                        "domain":domain
                     })
                 })
                 let body = document.getElementById("changePasswStatus");
