login screen beauties

--- a/Frontend/hello/templates/Base/navbar.html
+++ b/Frontend/hello/templates/Base/navbar.html
@@ -21,7 +21,9 @@
     <ul class="navbar-nav px-1">
       <button type="button" onclick="trySearch()" class="btn btn-dark">Найти</button>
       </ul>
-    <ul class="navbar-nav px-1">
+    <!--<ul class="navbar-nav px-1">
       <button type="button" class="btn btn-dark">Войти</button>
     </ul>
+    Сюда бы писать логин пользователя
+    -->
   </nav>
