--- a/Frontend/hello/templates/login/index.html
+++ b/Frontend/hello/templates/login/index.html
@@ -50,7 +50,7 @@
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <input class="form-control form-control-dark w-100" type="text" placeholder="Поиск" aria-label="Search">
+        <!--<<input class="form-control form-control-dark w-100" type="text" placeholder="Поиск" aria-label="Search">
         <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
           <a class="nav-link" href="search">Найти</a>
@@ -60,10 +60,10 @@
           <li class="nav-item text-nowrap">
             <a class="nav-link" href="login">Войти</a>
           </li>
-        </ul>
+        </ul>-->
       </nav>
 
-    <div class="container-fluid">
+ <!--   <div class="container-fluid">
         <div class="row">
           <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
             <div class="position-sticky ">
@@ -100,8 +100,8 @@
                 </li>
               </ul>
             </div>
-          </nav>
-          <main height="100%" class="text-center col-md-9 row ml-sm-auto col-lg-10 px-md-4">
+          </nav>-->
+          <main class="text-center ml-sm-auto px-md-4">
           <h1 class="m-3"> Добро пожаловать</h1>
             <form>
             <div class="form-outline text-center mb-4">
@@ -117,8 +117,8 @@
           
           </form>
         </main>
-        </div>
-      </div>
+      <!---  </div>
+      </div>-->
   {% block content %}
   {% endblock %}
 </div>
