--- a/Frontend/hello/templates/employee/index.html
+++ b/Frontend/hello/templates/employee/index.html
@@ -50,7 +50,7 @@
       <main height="100%" class="col-md-9 row ml-sm-auto col-lg-10 px-md-4">
         <H1 class="w-100 mb-3">СТРАНИЦА ПОЛЬЗОВАТЕЛЯ</H1>
         <div class="col-2 text-center">
-          <img width="100" height="100" class="img-rounded" src={{profile_json.img_src}} alt="">
+          <img width="200" height="200" src="/static/default.jpg" alt="">
           <div class="col"> {{profile_json.surname}} {{profile_json.name}} {{profile_json.patronymic}}</div>
           <div>
             <button type="button" class="btn btn-outline-primary w-100 m-1">Активность</button>
