--- a/Frontend/hello/templates/computer/index.html
+++ b/Frontend/hello/templates/computer/index.html
@@ -22,6 +22,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>{% block title %}{% endblock %}</title>
   {% load bootstrap5 %}
   {% bootstrap_css %}
@@ -51,84 +53,63 @@
       /* Height of navbar */
       box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     }
+    .status-icon {
+      font-size: 1em;
+    }
+    .status-true {
+        color: green;
+    }
+    .status-false {
+        color: red;
+    }
   </style>
 
 <body>
 
   {% include "../Base/navbar.html" %}
 
-  <div class="container-fluid">
-    <div class="row">
-      {% include "../Base/sidebar.html" %}
-      <main height="100%" class="col-md-9  row ml-sm-auto col-lg-10 px-md-4">
-        <H1 class="w-100 mb-3">СТРАНИЦА КОМПЬЮТЕРА</H1>
-        <h3><i> MSI Katana GF76</i></h2>
-        <div class="col row m-3 ">
+    <div class="container-fluid">
+        <div class="row">
+          {% include "../Base/sidebar.html" %}
+          <main  class=" row ml-sm-auto h-100 col-lg-10 pl-md-4">
+            <div id="table_computers">
+              <table>
+                <table class="table table-hover">
+                  <tbody>
+                    <tr>
+                        <td class="Status">Статус</td>
+                        <td class="DomainName">Компьютер</td>
+                        <td class="IPAddress">IP</td>
+                        <td class="ComputerRole">Роль</td>                        
+                        <td class="updated">Обновлен</td>      
+                    </tr>
+                    
+                    {% for row in computers_json%}
+                    <tr onclick='window.location="/computer/{{row.id}}";'>
+                      <td class="Status">
+                        {% if row.source.Status %}
+                        <i class="fas fa-circle status-icon status-true"></i>
+                        {% else %}
+                        <i class="fas fa-circle status-icon status-false"></i>
+                        {% endif %}
+                      </td>
+                      <td class="DomainName">{{row.source.ComputerName}}.{{row.source.DomainName}}</td>
+                      <td class="IPAddress">{{row.source.IPAddress}}</td>
+                      <td class="ComputerRole">{{ row.source.ComputerRole }}</td>
+                      <td class="updated">{{ row.source.updated|date:"d.m.Y H:i:s" }}</td>
 
-          <nav>
-            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-              <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab"
-                aria-controls="nav-home" aria-selected="true">Контактная информация</a>
-              <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                aria-controls="nav-profile" aria-selected="false">Установленные приложения</a>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
             </div>
-          </nav>
-          <div class="tab-content w-70" id="nav-tabContent">
-            <div class="tab-pane ml-2 mt-1 fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-
-              <button disabled class="col btn-light row" data-toggle="tooltip" data-placement="top" title="MSI Katana GF76 11UC-887XRU">
-                Название компьютера: MSI Katana GF76
-              </button>
-              <div class="w-100 border-top"></div>
-              <button disabled class="col mt-1 btn-light row"  data-toggle="tooltip" data-placement="top" title=
-"Майкрософт Windows 11 Домашняя для одного языка
-MUILanguages: {ru-RU, en-US}
-OSArchitecture: 64-разрядная
-SerialNumber: 00327-30988-97344-AAOEM">
-                Операционная система: Windows 10 Home
-              </button>
-              <div class="w-100 border-top"></div>
-                <button disabled class="col mt-1 btn-light row"  data-toggle="tooltip" data-placement="top" title=
-"Name: AMD Ryzen 7 4800H with Radeon Graphics
-NumberOfCores: 8
-NumberOfLogicalProcessors: 16
-Description: AMD64 Family 23 Model 96 Stepping 1">
-                Процессор: AMD Ryzen 7 4800H with Radeon Graphics
-              </button>
-              <div class="w-100 border-top"></div>
-                <button disabled class="col mt-1 btn-light row"  data-toggle="tooltip" data-placement="top" title=
-"Tag: Physical Memory 0
-Capacity: 8589934592
-SerialNumber: 617B5028
-Tag: Physical Memory 1
-Capacity: 8589934592
-SerialNumber: 5CBB504F">
-                Объём физической памяти: 17 179 869 184
-              </button>
-              <div class="w-100 border-top"></div>
-                <button disabled class="col mt-1 btn-light w-100 row"  data-toggle="tooltip" data-placement="top" title=
-"displayName: Windows Defender
-productState: 397568
-instanceGuid: {D68DDC3A-831F-4fae-9E44-DA132C1ACF46}">
-                Антивирус: Windows Defender
-              </button>
-              <div class="w-100 border-top"></div>
-
-            </div>
-            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-
-              {% for app in profile_json.apps%}
-                <div class="col">
-                  {{app}}
-                </div>
-              <div class="w-100 border-top"></div>
-              {% endfor %}
-            </div>
-          </div>
+        </main>
         </div>
-    </div>
-  </div>
-  </div>
-  </div>
+      </div>
+  {% block content %}
+  {% endblock %}
+</div>
+
+</body>
 </body>
 </html>
