--- a/Frontend/hello/templates/computer_detail/index.html
+++ b/Frontend/hello/templates/computer_detail/index.html
@@ -97,12 +97,12 @@
               <div class="w-100 border-top"></div>
               <div class="col row">
                 <div class="col-4">Имя</div>
-                <div class="col-1 "> {{computer_json.ComputerName}} </div>
+                <div class="col-1 " style="width: 50%;"> {{computer_json.ComputerName}} </div>
               </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
                 <div class="col-4">Домен</div>
-                <div class="col-1 "> {{computer_json.DomainName}} </div>
+                <div class="col-1 " style="width: 50%;"> {{computer_json.DomainName}} </div>
               </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
