--- a/Frontend/hello/templates/Base/navbar.html
+++ b/Frontend/hello/templates/Base/navbar.html
@@ -12,11 +12,14 @@
 </script>
 
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap mb-3 p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">ИТ Академия</a>
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">Admin Helper Center</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
+    <button type="button" data-toggle="modal" data-target="#createUserModal" class="btn btn-primary mx-1 my-1 col"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+      <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+      <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+    </svg> Создать</button>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Поиск" id="searchText" aria-label="Search" onkeydown="trySearchtext()">
     <ul class="navbar-nav px-1">
       <button type="button" onclick="trySearch()" class="btn btn-dark">Найти</button>
@@ -27,3 +30,50 @@
     Сюда бы писать логин пользователя
     -->
   </nav>
+<main>
+  <div class="modal fade" id="createUserModal" tabindex="-1" role="dialog" aria-labelledby="createUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="createUserModalLabel">Создать пользователя</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form  method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="name" class="col-form-label">Имя:</label>
+              <input type="text" class="form-control" id="name" name="name"  required>
+  
+              <label for="surname" class="col-form-label">Фамилия:</label>
+              <input type="text" class="form-control" id="surname" name="surname"  required>
+  
+              <label for="patronymic" class="col-form-label">Отчество:</label>
+              <input type="text" class="form-control" id="patronymic" name="patronymic" required>
+  
+              <label for="company" class="col-form-label">Компания:</label>
+              <input type="text" class="form-control" id="company" name="company"  required>
+  
+              <label for="apply_date" class="col-form-label">Дата принятия на работу:</label>
+              <input type="date" class="form-control" id="apply_date" name="apply_date"  required>
+  
+              <label for="appointment" class="col-form-label">Должность:</label>
+              <input type="text" class="form-control" id="appointment" name="appointment"  required>
+  
+              <label for="city" class="col-form-label">Город:</label>
+              <input type="text" class="form-control" id="city" name="city" required>
+
+            </div>
+            <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+          <button id=""type="" class="btn btn-primary">Добавить</button>
+        </div>
+          </form>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</main>
